[tool.poetry]
name = "acab-streetlife"
version = "0.1.0"
description = ""
authors = ["muCCC"]
readme = "README.md"
packages = [{include = "acab_streetlife"}]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
